<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/navigation_drawer_view_menu_profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/studentProfileFragment"
                    android:icon="@drawable/ic_supervisor_account"
                    android:title="@string/navigation_drawer_view_menu_profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_reply"
                    android:title="@string/navigation_drawer_view_menu_logout"
                    />
            </group>

        </menu>
    </item>

    <item android:title="@string/navigation_drawer_view_menu_connect">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_description"
                    android:title="@string/navigation_drawer_view_menu_aboutus" />
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/navigation_drawer_view_menu_feedback" />
            </group>

        </menu>
    </item>

</menu>